@@ -28,7 +28,7 @@
 #define	ARCHIVE_ENTRY_H_INCLUDED
 
 /* Note: Compiler will complain if this does not match archive.h! */
-#define	ARCHIVE_VERSION_NUMBER 3008004
+#define	ARCHIVE_VERSION_NUMBER 3008005
 
 /*
  * Note: archive_entry.h is for use outside of libarchive; the
